--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-{% include "_partials/_header.html" %}
+{% include "_partials/_header.html" with { title: "Cahier d'exercice"} %}
 
 <!-- Votre contenu ici -->
 
